# pangrm

./: CHANGELOG.md  Makefile  README.md  TODO.md  cabal.project  hie.yaml
doc/: adl.md  dsg.md  ext.md  tgy.md
etc/: .gitignore  RMP.md  TST.md
etc/fmt/: amx.md  ldif.md
etc/obs/Readers/: AMX.hs
etc/obs/Writers/: CQL.hs
src/cli/: .ghci  .gitignore  .vimrc  README.md  cabal.project  hie.yaml  pangrm-cli.cabal
src/cli/src/app/: Main.hs
src/cli/src/lib/Pangrm/: Cli.hs
src/cli/src/lib/Pangrm/Cli/: Arg.hs  Fio.hs  Opt.hs  Run.hs
src/cli/src/lib/Pangrm/Cli/Opt/: Fmt.hs  Get.hs  Glb.hs  Job.hs
src/cli/tst/: Main.hs
src/cli/tst/Specs/: ParserSpec.hs  ValidatorSpec.hs
src/lib/: .ghci  README.md  hie.yaml  pangrm.cabal
src/lib/src/: Pangrm.hs
src/lib/src/Pangrm/: Core.hs  Registry.hs  Shared.hs
src/lib/src/Pangrm/Core/: Format.hs  Graph.hs  PangrmMonad.hs  PangrmState.hs
src/lib/src/Pangrm/Core/Graph/: Optics.hs  Types.hs  Utils.hs
src/lib/src/Pangrm/Formats/: Cql.hs  Ldif.hs
src/lib/src/Pangrm/Formats/Cql/: Format.hs  Reader.hs  Writer.hs
src/lib/src/Pangrm/Formats/Ldif/: Format.hs  Reader.hs  Writer.hs
src/lib/src/Pangrm/Shared/: Error.hs  Logging.hs  Options.hs
src/lib/tst/: Main.hs
src/lib/tst/Specs/: GraphSpec.hs
src/lib/tst/data/ldif/well-formed/valid/: empty.ldif
