cabal-version:        3.0
name:                 pangrm-cli
version:              0.1.0.0
build-type:           Simple
license:              GPL-3.0-or-later
license-file:         LICENSE
copyright:            © 2025 nemron
author:               Normen Müller (nemron) <normen.mueller@gmail.com>
maintainer:           Normen Müller (nemron) <normen.mueller@gmail.com>
stability:            alpha

synopsis:             ...
description:          The goal of ...

extra-doc-files:      README.md

source-repository head
  type:               git
  location:           https://github.com/normenmueller/pangrm.git

common warnings
    ghc-options:      -Wall -O2 -optl-Wl, -w

executable pangrm
    import:           warnings
    hs-source-dirs:   src/app
    main-is:          Main.hs
    build-depends:    base                 >=4.18 && <4.19,
                      -- pangrm client lib
                      pangrm-cli,
                      -- pangrm lib
                      pangrm               ==0.1.0.0,
                      text                 >=1.2  && <1.3,
                      prettyprinter        >=1.7  && <1.8,
                      optparse-applicative >=0.18 && <0.19,
    default-language: Haskell2010

library
    import:           warnings
    hs-source-dirs:   src/lib
    exposed-modules:  Pangrm.Cli
                      Pangrm.Cli.Opt
                      Pangrm.Cli.Opt.Glb
                      Pangrm.Cli.Opt.Job
                      Pangrm.Cli.Opt.Fmt
                      Pangrm.Cli.Opt.Get
                      Pangrm.Cli.Arg
                      Pangrm.Cli.Fio
                      Pangrm.Cli.Run
    autogen-modules:  Paths_pangrm_cli
    other-modules:    Paths_pangrm_cli
    build-depends:    base                 >=4.18 && <4.19,
                      -- pangrm lib
                      pangrm                      ==0.1.0.0,

                      mtl                         >=2.3  && <2.4,
                      extra                       >=1.8  && <1.9,

                      optics                      >=0.4  && <0.5,
                      optics-th                   >=0.4  && <0.5,
                      optics-core                 >=0.4  && <0.5,

                      filepath                    >=1.5  && <1.6,
                      directory                   >=1.3  && <1.4,
                      optparse-applicative        >=0.18 && <0.19,

                      text                        >=1.2  && <1.3,
                      containers                  >=0.7  && <0.8,
                      data-default                >=0.8  && <0.9,

                      prettyprinter               >=1.7  && <1.8,
                      prettyprinter-ansi-terminal >=1.1  && <1.2
    default-language: Haskell2010

test-suite pangrm-cli-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   tst
    main-is:          Main.hs
    other-modules:    Specs.ParserSpec
                      Specs.ValidatorSpec
    build-depends:    base                 >=4.18 && <4.19,
                      hspec               ^>=2.11.10,
                      -- pangrm client lib
                      pangrm-cli,
                      -- pangrm lib
                      pangrm                      ==0.1.0.0,

                      mtl                         >=2.3  && <2.4,
                      extra                       >=1.8  && <1.9,

                      optics                      >=0.4  && <0.5,
                      optics-th                   >=0.4  && <0.5,
                      optics-core                 >=0.4  && <0.5,

                      filepath                    >=1.5  && <1.6,
                      directory                   >=1.3  && <1.4,
                      optparse-applicative        >=0.18 && <0.19,

                      text                        >=1.2  && <1.3,
                      containers                  >=0.7  && <0.8,
                      data-default                >=0.8  && <0.9,

                      prettyprinter               >=1.7  && <1.8,
                      prettyprinter-ansi-terminal >=1.1  && <1.2

